--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -7,7 +7,7 @@ body{
     flex-direction: column;
     flex-wrap: wrap;
     border-radius: 18px;
-    background: grey;
+    background: rgb(87, 90, 97);
     box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
     margin:20px;
   }
@@ -15,6 +15,10 @@ body{
     text-align: center;
     color: black;
     font-weight: bold;
+  }
+  .name:hover{
+    color: orange;
+    cursor: pointer;
   }
 
   .card-image {
@@ -25,12 +29,13 @@ body{
   }
 
 
-  .card-text .status {
-    color: rgb(100, 22, 55);
+   .status {
+    color: rgb(255, 255, 255);
+    font-weight: bold;
     font-size:15px;
   }
   .card-text p {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size:15px;
     font-weight: 300;
     text-align: center;
@@ -40,26 +45,7 @@ body{
     font-size:28px;
   }
 
-  .card-stats {
-    grid-area: stats; 
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-  
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background: rgb(0, 0, 0);
-  }
 
-  .card-stats .stat {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  
-    color: white;
-    padding:10px;
-  }
 
   .card:hover {
     transform: scale(1.1);
@@ -70,8 +56,36 @@ body{
     cursor: pointer;
     text-align: center;
   }
-.content{
 
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+
+
+
+
+.loader-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.834);
+  z-index: 1;
+}
+
+.spinner {
+  width: 64px;
+  height: 64px;
+  border: 8px solid;
+  border-color: #67db9b transparent #04a346 transparent;
+  border-radius: 50%;
+  animation: spin-anim 1.2s linear infinite;
+}
+
+@keyframes spin-anim {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
 }
