previous and next buttons

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,65 +1,62 @@
-body{
+body {
   background-color: rgba(128, 128, 128, 0.123);
 }
 .card {
-    width:275px ;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    border-radius: 18px;
-    background: rgb(87, 90, 97);
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
-    margin:20px;
-  }
-  .name{
-    text-align: center;
-    color: black;
-    font-weight: bold;
-  }
-  .name:hover{
-    color: orange;
-    cursor: pointer;
-  }
+  width: 280px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  border-radius: 18px;
+  background: rgb(87, 90, 97);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+  margin: 30px;
+  font-family:  Quicksand;
+}
+.name {
+  text-align: center;
+  color: black;
+  font-weight: bold;
+}
+.name:hover {
+  color: rgb(168, 235, 18);
+  cursor: pointer;
+}
 
-  .card-image {
-    width: 275px;
-    height:auto;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-  }
+.card-image {
+  width: 280px;
+  height: auto;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
 
+.status {
+  text-align: center;
+  padding: 5px;
+  color: orange;
+  font-weight: bold;
+  font-size: 16px;
+}
+.card-text p {
+  color: rgb(255, 255, 255);
+  font-size: 15px;
+  font-weight: 300;
+  text-align: center;
+  margin: 10px;
+}
+.card-text h2 {
+  margin-top: 0px;
+  font-size: 28px;
+}
 
-   .status {
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    font-size:15px;
-  }
-  .card-text p {
-    color: rgb(255, 255, 255);
-    font-size:15px;
-    font-weight: 300;
-    text-align: center;
-  }
-  .card-text h2 {
-    margin-top:0px;
-    font-size:28px;
-  }
-
-
-
-  .card:hover {
-    transform: scale(1.1);
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
-  }
-  .card {
-    transition: 0.5s ease;
-    cursor: pointer;
-    text-align: center;
-  }
-
-
-
-
+.card:hover {
+  transform: scale(1.1);
+  box-shadow: 5px 5px 15px rgba(255, 255, 255, 0.6);
+}
+.card {
+  transition: 0.5s ease;
+  cursor: pointer;
+  text-align: center;
+}
 
 .loader-container {
   width: 100%;
@@ -80,12 +77,15 @@ body{
   border-radius: 50%;
   animation: spin-anim 1.2s linear infinite;
 }
-
+.animate__backInUp {
+  animation: rotate; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
+}
 @keyframes spin-anim {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
