--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -3,10 +3,11 @@ h2 {
   color: white;
 }
 h2:hover{
-  color: orange;
+  color: rgb(168, 235, 18);
   cursor: pointer;
 }
 nav {
+  font-family: Quicksand;
   margin: 0.4 rem;
   background-color: black;
   border-bottom: 5px solid white;
@@ -30,7 +31,7 @@ a.tag {
 }
 a.tag:hover {
   color: white;
-  background-image: linear-gradient(to bottom, #000000, #a8eb12);
+  background-image: linear-gradient(to bottom, #000000, rgb(168, 235, 18));
   border-radius: 5px;
   transform: scale(1.2);
 }
